--- a/scanitonapp/en.lproj/MainStoryboard.storyboard
+++ b/scanitonapp/en.lproj/MainStoryboard.storyboard
@@ -228,7 +228,7 @@
                         <outlet property="fullNameRegisterTextField" destination="hbJ-Xo-f1m" id="YQY-Pm-AbJ"/>
                         <outlet property="passwordRegisterTextField" destination="wN2-Hr-MrQ" id="Kiu-9x-8Kp"/>
                         <outlet property="userRegisterTextField" destination="rpY-6X-SdQ" id="ZmA-8Z-Zng"/>
-                        <segue destination="4je-N5-V7v" kind="push" identifier="SignupSuccessful" id="fTM-1K-4Xt"/>
+                        <segue destination="4je-N5-V7v" kind="push" identifier="SignupSuccesful" id="fTM-1K-4Xt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vNm-CM-vmA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -260,47 +260,6 @@
     <resources>
         <image name="Logo2.png" width="3144" height="997"/>
     </resources>
-    <classes>
-        <class className="LoginViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="logInPressed:"/>
-                <relationship kind="outlet" name="passwordTextField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="userTextField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="RegisterViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RegisterViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="signUpUserPressed:"/>
-                <relationship kind="outlet" name="fullNameRegisterTextField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="passwordRegisterTextField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="userRegisterTextField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="ScanViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScanViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="logoutPressed:"/>
-            </relationships>
-        </class>
-        <class className="UploadImageViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UploadImageViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="selectPicturePressed:"/>
-                <relationship kind="action" name="sendPressed:"/>
-                <relationship kind="outlet" name="commentTextField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="imgToUpload" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="WallPicturesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WallPicturesViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="logoutPressed:"/>
-                <relationship kind="outlet" name="wallScroll" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
