--- a/scanitonapp/en.lproj/MainStoryboard.storyboard
+++ b/scanitonapp/en.lproj/MainStoryboard.storyboard
@@ -260,6 +260,45 @@
     <resources>
         <image name="Logo2.png" width="3144" height="997"/>
     </resources>
+    <classes>
+        <class className="LoginViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="passwordTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="userTextField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="RegisterViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RegisterViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="fullNameRegisterTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordRegisterTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="userRegisterTextField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ScanViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScanViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="logoutPressed:"/>
+            </relationships>
+        </class>
+        <class className="UploadImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UploadImageViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="selectPicturePressed:"/>
+                <relationship kind="action" name="sendPressed:"/>
+                <relationship kind="outlet" name="commentTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="imgToUpload" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="WallPicturesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WallPicturesViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="logoutPressed:"/>
+                <relationship kind="outlet" name="wallScroll" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
